# SDL_Projects

./: AnimatedSprite.cpp  AnimatedSprite.h  ResourceManager.cpp  ResourceManager.h  SDL Abstraction.sln  SDL Abstraction.vcxproj  SDL Abstraction.vcxproj.filters  TextureRectangle.cpp  TextureRectangle.h  main.cpp
key_press_proj/: CMakeLists.txt  Window.h  main.cpp
